--- a/index.html
+++ b/index.html
@@ -8,26 +8,27 @@ title: Adam Laycock
     <p><big>{{site.name}}</big></p>
     <p>I am a graduate from the computer science program at the University of Calgary. Currently a software and web developer.</p>
   </div>
-
-  {% for post in site.posts %}
-    <a href="{{ post.url }}">
-      <div class="posts">
-        <div class="header">
-          <span class="date">{{ post.date | date_to_string }}</span>
-          <h2>
-            {% if post.categories contains 'projects' %}
-              <span class="name">Project:
-            {% endif %}
-            {{ post.title }}
-            {% if post.categories contains 'projects' %}
-              </span>
-            {% endif %}
-          </h2>
-        </div>
-        <div class="body">
-          {{ post.excerpt }}
+  <div id="grid">
+    {% for post in site.posts %}
+      <div class="grid-item" onclick="location.href='{{ post.url }}'" style="cursor: hand;">
+        <div class="posts">
+          <div class="header">
+            <span class="date">{{ post.date | date_to_string }}</span>
+            <h2>
+              {% if post.categories contains 'projects' %}
+                <span class="name">Project:
+              {% endif %}
+              {{ post.title }}
+              {% if post.categories contains 'projects' %}
+                </span>
+              {% endif %}
+            </h2>
+          </div>
+          <div class="body">
+            {{ post.excerpt }}
+          </div>
         </div>
       </div>
-    </a>
-  {% endfor %}
+    {% endfor %}
+  </div>
 </div>
