--- a/resume/index.html
+++ b/resume/index.html
@@ -8,19 +8,7 @@ title: Resume
     <p><big>{{page.title}}</big></p>
   </div>
 
-  {% for post in site.posts %}
-    {% if post.categories contains 'projects' %}
-      <a href="{{ post.url }}">
-        <div class="posts">
-          <div class="header">
-            <span class="date">{{ post.date | date_to_string }}</span>
-            <h2>{{ post.title }}</h2>
-          </div>
-          <div class="body">
-            {{ post.excerpt }}
-          </div>
-        </div>
-      </a>
-    {% endif %}
-  {% endfor %}
+  <div class="post githubmd">
+    {% markdown resume.md %}
+  </div>
 </div>
