--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </p>
 
         <p>
-          Whenever I have a chance, I'll typically be found
+          Whenever I have a chance, you can find me
           <a
             href="https://bouncy-mushroom-c8e.notion.site/5df21513b833446f9b7de6bc370f247b?v=f40bdd4e39064cea8e3e39ada7c6f37b"
             target="_blank"
@@ -126,13 +126,15 @@
         </p>
 
         <p>
-          Occasionally, I'll write articles about tech. For example,
+          Occasionally, I'll write articles about tech. A couple of examples
+          include
           <a
             href="https://medium.com/curated-by-versett/build-tools-you-can-trust-not-just-use-c1f0662d1f59"
             target="_blank"
             rel="noopener noreferrer"
             >building tools you can trust</a
-          >, or
+          >
+          or
           <a
             href="https://medium.com/curated-by-versett/dont-eject-your-create-react-app-b123c5247741"
             target="_blank"
