--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
       @media (min-width: 640px) {
         #card {
-          margin-top: 36px;
+          margin: 36px auto;
         }
 
         #content {
@@ -98,15 +98,15 @@
         </p>
 
         <p>
-          Whenever I have a chance, you can find me
+          I love the outdoors, you can often find me
           <a
             href="https://bouncy-mushroom-c8e.notion.site/5df21513b833446f9b7de6bc370f247b?v=f40bdd4e39064cea8e3e39ada7c6f37b"
             target="_blank"
             rel="noopener noreferrer"
             >hiking</a
-          >, scrambling, or climbing in beautiful Canadian Rockies, often in the
-          Canmore area. If the opportunity presents itself I'll explore a bit
-          further, but always focusing on finding unique or otherwise jagged
+          >, scrambling, or climbing in beautiful Canadian Rockies, usually in
+          the Canmore area. If the opportunity presents itself I'll explore a
+          bit further, but always focusing on finding unique or jagged
           landscapes.
         </p>
 
