--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <p>
           I love the outdoors, you can often find me
           <a
-            href="https://adaminthehills.notion.site/5df21513b833446f9b7de6bc370f247b?v=f40bdd4e39064cea8e3e39ada7c6f37b"
+            href="https://adaminthehills.notion.site/Trip-reports-8699511da8ec4ae98261a19407e3566c"
             target="_blank"
             rel="noopener noreferrer"
             >hiking</a
