Add redirect route again

--- a/hikes/index.html
+++ b/hikes/index.html
@@ -1,3 +1,3 @@
 <script>
-    window.location.href = "https://www.notion.so/adaminthehills/Trip-reports-8699511da8ec4ae98261a19407e3566c";
+    window.location.href = "https://adaminthehills.notion.site/Trip-reports-8699511da8ec4ae98261a19407e3566c";
 </script>
