--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <p>
           I love the outdoors, you can often find me
           <a
-            href="https://adaminthehills.notion.site/Trip-reports-8699511da8ec4ae98261a19407e3566c"
+            href="https://adamlaycock.ca/hikes"
             target="_blank"
             rel="noopener noreferrer"
             >hiking</a
