--- a/index.html
+++ b/index.html
@@ -93,25 +93,21 @@
         <h1>Hi there!</h1>
 
         <p>
-          My name is Adam Laycock, my pronouns are he/him, and this is my
-          website.
+          My name is Adam Laycock.
         </p>
 
         <p>
-          I love the outdoors, you can often find me
+          You can often find me
           <a
             href="https://adamlaycock.ca/hikes"
             target="_blank"
             rel="noopener noreferrer"
             >hiking</a
-          >, scrambling, or climbing in beautiful Canadian Rockies, usually in
-          the Canmore area. If the opportunity presents itself I'll explore a
-          bit further, but always focusing on finding unique or jagged
-          landscapes.
+          >, scrambling, or climbing in beautiful Canadian Rockies.
         </p>
 
         <p>
-          I'm currently a senior web developer at
+          I'm currently an engineering lead at
           <a href="https://canny.io/" target="_blank" rel="noopener noreferrer"
             >Canny</a
           >
@@ -121,26 +117,8 @@
             target="_blank"
             rel="noopener noreferrer"
             >Versett</a
-          >. I care a lot about composable design systems, pixel-perfect user
+          >. I care a lot about design systems, pixel-perfect user
           interfaces, and accessibility.
-        </p>
-
-        <p>
-          Occasionally, I'll write articles about tech. A couple of examples
-          include
-          <a
-            href="https://medium.com/curated-by-versett/build-tools-you-can-trust-not-just-use-c1f0662d1f59"
-            target="_blank"
-            rel="noopener noreferrer"
-            >building tools you can trust</a
-          >
-          or
-          <a
-            href="https://medium.com/curated-by-versett/dont-eject-your-create-react-app-b123c5247741"
-            target="_blank"
-            rel="noopener noreferrer"
-            >why not to eject your create-react-app</a
-          >.
         </p>
 
         <p>
